force-app/main/default/objects/Customer_Product_Alert__c/Customer_Product_Alert__c.object-meta.xml
<CustomObject>
    <label>Customer Product Alert</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Customer Product Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>