force-app/main/default/objects/Customer_Product_Alert__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link up with customer who own the data</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Maturities</relationshipName>
    <type>Lookup</type>
</CustomField>