force-app/main/default/objects/Customer_Product_Alert__c/fields/Dept_No_Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Dept_No_Fund_Code__c</fullName>
    <description>Deposit/MF/Insurance Account dept no/Fund code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dept No/Fund Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>