force-app/main/default/objects/Customer_Product_Alert__c/fields/Dormant_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Near Dormant Account Date</label>
    <type>Date</type>
</CustomField>