force-app/main/default/objects/Customer_Product_Alert__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>IF TYPE = &apos;DP&apos; -&gt; CUST_ID+TMB_ACCOUNT_ID+TMB_DEPT_NO+MATURITY_DATE
IF TYPE = &apos;DP-DORMANT&apos; -&gt;  CUST_ID+TMB_ACCOUNT_ID+TMB_DEPT_NO+DORMANT_DATE
IF TYPE = &apos;MF&apos; -&gt;  CUST_ID+TMB_ACCOUNT_ID+ TMB_DEPT_NO+ TMB_PRODUCT_CODE+MATURITY_DATE
IF TYPE = &apos;BA&apos; -&gt; CUST_ID+TMB_ACCOUNT_ID+PAID_UP_DATE+EXPIRY_DATE+NEXT_PAYMENT_DATE

Used as External Id for upsert job from data batch job.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>