force-app/main/default/objects/Customer_Product_Alert__c/fields/Financial_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Group__c</fullName>
    <label>Financial Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DP</fullName>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>DP-DORMANT</fullName>
            </value>
            <value>
                <fullName>DEB</fullName>
                <label>Debenture</label>
            </value>
            <value>
                <fullName>MF-ADJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>