force-app/main/default/objects/Customer_Product_Alert__c/fields/Insurance_Fully_Paid_Flag__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Fully_Paid_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Paid Flag</label>
    <type>Checkbox</type>
</CustomField>