force-app/main/default/objects/Customer_Product_Alert__c/fields/Insurance_Paid_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Paid_Up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Fully Paid Date</label>
    <type>Date</type>
</CustomField>