force-app/main/default/objects/Customer_Product_Alert__c/fields/Insurance_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payment_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>