force-app/main/default/objects/Customer_Product_Alert__c/fields/Insurance_Premium_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_Amount_Due__c</fullName>
    <label>Insurance Premium Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>