force-app/main/default/objects/Customer_Product_Alert__c/fields/Insurance_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Sum_Insured__c</fullName>
    <label>Insurance Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>