force-app/main/default/objects/Customer_Product_Alert__c/fields/MF_Gain_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>MF_Gain_Loss_Percent__c</fullName>
    <label>MF_Gain_Loss_Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>