force-app/main/default/objects/Customer_Product_Alert__c/fields/MF_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>MF_Outstanding__c</fullName>
    <label>MF Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>