force-app/main/default/objects/Customer_Product_Alert__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>